tests/ui/substrate/implementation/fail_incorrect_weight_path.stderr
error: dispatch path should contain at least three segments
  --> tests/ui/substrate/implementation/fail_incorrect_weight_path.rs:17:19
   |
17 |     #[obce(weight(dispatch = "test_method"))]
   |                   ^^^^^^^^
